--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "webpack",
     "dev": "webpack serve",
     "deploy": "git subtree push --prefix dist origin gh-pages"
-
   },
   "repository": {
     "type": "git",
@@ -26,9 +25,13 @@
   },
   "homepage": "https://github.com/orbec/nodejs-javascript-template#readme",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
