Added Babel to the project

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "homepage": "https://github.com/orbec/nodejs-javascript-template#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
     "@eslint/js": "^9.13.0",
+    "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
@@ -33,7 +36,7 @@
     "html-webpack-plugin": "^5.6.0",
     "prettier": "3.3.3",
     "style-loader": "^4.0.0",
-    "webpack": "^5.94.0",
+    "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   }
