--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "project template for javascript projects based in NodeJs with Webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "dev": "webpack serve",
+    "jest": "jest --watch",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^9.1.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
