added Babel to Jest

--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   },
   "homepage": "https://github.com/orbec/nodejs-javascript-template#readme",
   "devDependencies": {
-    "@babel/core": "^7.25.9",
-    "@babel/preset-env": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.13.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
